// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Empty11 = [
// 11
...];
type Empty12 = [// 12
...];
type Empty13 = [
...// 13
];
type Empty14 = [
...
// 14
];

type Empty21 = [
/* 21 */
...];
type Empty22 = [/* 22 */
...];
type Empty23 = [
.../* 23 */
];
type Empty24 = [
...
/* 24 */
];
type Empty25 = [/* 25 */...];
type Empty26 = [.../* 25 */];

=====================================output=====================================
type Empty11 = [
  ...// 11
];
type Empty12 = [
  ...// 12
];
type Empty13 = [
  ...// 13
];
type Empty14 = [
  ...// 14
];

type Empty21 = [.../* 21 */];
type Empty22 = [.../* 22 */];
type Empty23 = [.../* 23 */];
type Empty24 = [.../* 24 */];
type Empty25 = [.../* 25 */];
type Empty26 = [.../* 25 */];

================================================================================
`;

exports[`inexact.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Empty = [...];

type One = [number, ...];

=====================================output=====================================
type Empty = [...];

type One = [number, ...];

================================================================================
`;

exports[`labeled.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [a: string, b: number];

=====================================output=====================================
type T = [a: string, b: number];

================================================================================
`;

exports[`optional.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type A = [a?: string, +b?: number, -c?: boolean];

// Unaffected
type B = [?string, [?string], (?string) => boolean];

=====================================output=====================================
type A = [a?: string, +b?: number, -c?: boolean];

// Unaffected
type B = [?string, [?string], (?string) => boolean];

================================================================================
`;

exports[`variance.js format[flow] 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [a: string, +b: number, -c: boolean];

=====================================output=====================================
type T = [a: string, +b: number, -c: boolean];

================================================================================
`;
